// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

message GkemulticloudAlphaAzureClient {
  string name = 1;
  string tenant_id = 2;
  string application_id = 3;
  string certificate = 4;
  string uid = 5;
  string create_time = 6;
  string project = 7;
  string location = 8;
}

message ApplyGkemulticloudAlphaAzureClientRequest {
  GkemulticloudAlphaAzureClient resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteGkemulticloudAlphaAzureClientRequest {
  string service_account_file = 1;
  GkemulticloudAlphaAzureClient resource = 2;
}

message ListGkemulticloudAlphaAzureClientRequest {
  string service_account_file = 1;
	GkemulticloudAlphaAzureClient resource = 2;
}

message ListGkemulticloudAlphaAzureClientResponse {
  repeated GkemulticloudAlphaAzureClient items = 1;
}

service GkemulticloudAlphaAzureClientService {
  rpc ApplyGkemulticloudAlphaAzureClient(ApplyGkemulticloudAlphaAzureClientRequest) returns (GkemulticloudAlphaAzureClient);
  rpc DeleteGkemulticloudAlphaAzureClient(DeleteGkemulticloudAlphaAzureClientRequest) returns (google.protobuf.Empty);
  rpc ListGkemulticloudAlphaAzureClient(ListGkemulticloudAlphaAzureClientRequest) returns (ListGkemulticloudAlphaAzureClientResponse);
}
